tests/ui/ferrocene/compiler-arguments/crate-name/crate-name_no-option.rs
//@ check-fail
//@ compile-flags: --crate-name=
//~? ERROR crate name must not be empty

fn main() {}

// ferrocene-annotations: um_rustc_crate_name
